--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -7,14 +7,6 @@
 	<title>{% if title %} {{title}} {% else %} Blog {% endif %}</title>
 </head>
 <body>
-	{% for post in posts %}
-		<h2>{{ post.title }}</h2>
-		<small>Published on {{ post.published_at }} by {{ post.author}}</small>
-		<p>{{ post.content }}</p>
-	{% endfor %}
-
-	
-
 	{% block content %}
 <h1>My Posts</h1>
 	{% for post in posts %}
@@ -24,8 +16,8 @@
 		
 		{% if request.user.is_authenticated and request.user == post.author %}
 		<p>
-			<a href="{% url 'post-edit' post.id %}">Edit</a> 
-			<a href="{% url 'post-delete' post.id%}">Delete</a>
+			<a href="{% url 'post-edit' post.id %}">Editar</a> 
+			<a href="{% url 'post-delete' post.id%}">Eliminar</a>
 		</p>
 		{% endif %}
 		
