--- a/templates/base.html
+++ b/templates/base.html
@@ -11,13 +11,13 @@
   <body>
   	<header>
   		{%if request.user.is_authenticated %}
-  			<a href="{% url 'posts' %}">My Posts</a>
-  			<a href="{% url 'post-create' %}">New Post</a>
-  			<span>Hi {{ request.user.username | title }}</span>
-  			<a href="{% url 'logout' %}">Logout</a>
+  			<a href="{% url 'posts' %}">Mis Publicaciones</a>
+  			<a href="{% url 'post-create' %}">Nueva Publicación</a>
+  			<!-- <span>Hi {{ request.user.username | title }}</span> -->
+  			<a href="{% url 'logout' %}">Cerrar Sesión</a>
   		{%else%}
-  			<a href="{% url 'login' %}">Login</a>
-  			<a href="{% url 'register' %}">Register</a>
+  			<a href="{% url 'login' %}">Iniciar Sesión</a>
+  			<a href="{% url 'register' %}">Registrarse</a>
   		{%endif%}
   	</header>
   	<main>
