--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -11,7 +11,7 @@
 <h1>My Posts</h1>
 	{% for post in posts %}
 		<h2>{{ post.title }}</h2>
-		<small>Published on {{ post.published_at | date:"M d, Y" }} by {{ post.author | title}}</small>
+		<small>Publicado el {{ post.published_at | date:"d M, Y" }} por {{ post.author | title}}</small>
 		<p>{{ post.content }}</p>
 		
 		{% if request.user.is_authenticated and request.user == post.author %}
