--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -5,10 +5,13 @@
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>{% if title %} {{title}} {% else %} Blog {% endif %}</title>
+	{% load bootstrap5 %}
+	{% bootstrap_css %}
 </head>
 <body>
 	{% block content %}
-<h1>My Posts</h1>
+	<div class="container">
+		<h1>My Posts</h1>
 	{% for post in posts %}
 		<h2>{{ post.title }}</h2>
 		<small>Publicado el {{ post.published_at | date:"d M, Y" }} por {{ post.author | title}}</small>
@@ -20,8 +23,9 @@
 			<a href="{% url 'post-delete' post.id%}">Eliminar</a>
 		</p>
 		{% endif %}
-		
-	{% endfor %}
-{% endblock content %}
+		{% endfor %}
+		{% endblock content %}
+	</div>
+
 </body>
 </html>
