--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -12,6 +12,15 @@
 	{% block content %}
 	<div class="container my-5">
 		<h1 class="text-center mb-4">Mis Publicaciones</h1>
+
+		{% if is_admin %}
+    <!-- Contenido solo para administradores -->
+    <p>Bienvenido, administrador.</p>
+{% else %}
+    <!-- Contenido solo para usuarios convencionales -->
+    <p>Bienvenido, usuario convencional.</p>
+{% endif %}
+
 		{% for post in posts %}
 			<div class="card mb-4">
 				<div class="card-body">
