--- a/blog/templates/blog/post_confirm_delete.html
+++ b/blog/templates/blog/post_confirm_delete.html
@@ -5,20 +5,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    {% load django_bootstrap5 %}
+    {% bootstrap_css %}
 </head>
 <body>
-    {% block content %}
-<h2>Delete Post</h2>
+    <div class="container my-5">
+      <div class="card mb-4" style="border-color: black;">
+        <div class="card-body">
+          {% block content %}
+          <div class="card2 mx-auto p-4" style="max-width: 400px;">
+            <h2 class="text-center mb-4">Delete Post</h2>
 
-<form method="POST">
-  {% csrf_token %}
-  <p>Are you sure that you want to delete the post "{{post.title}}"?</p>
-  <div>
-    <button type="submit">Yes, Delete</button>
-    <a href="{% url 'posts' %}">Cancel</a>
-  </div>
-</form>
+          <form method="POST">
+            {% csrf_token %}
+            <p>Are you sure that you want to delete the post "{{post.title}}"?</p>
+            <div class="d-flex justify-content-start mt-3">
+              <button type="submit" class="btn btn-danger btn-sm" style="margin: 10px;">Yes, Delete</button>
+              <a href="{% url 'posts' %}" class="btn btn-warning btn-sm me-2" style="margin: 10px;">Cancel</a>
+            </div>
+          </form>
 
-{% endblock content %}
+          {% endblock content %}
+          </div>
+        </div>
+      </div>
+    </div>
 </body>
 </html>
