--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -9,34 +9,35 @@
     {% bootstrap_css %}
 </head>
 <body>
-   <div class="container">
-    {% block content %}
-    <form method="POST" novalidate>
-        {% csrf_token %}
-        <h2>Registrate</h2>
-
-        <!-- Si tienes campos en el formulario, podemos renderizarlos automáticamente con Bootstrap -->
-        {% bootstrap_form form %}
-
-        <!-- Botón de enviar -->
-        <button type="submit" class="btn btn-primary">Registrarse</button>
-
-        <!-- Mostrar errores del formulario -->
-        {% for field in form %}
-            {% if field.errors %}
-            <div class="alert alert-danger">
-                <ul>
-                    {% for error in field.errors %}
-                    <li>{{ error }}</li>
-                    {% endfor %}
-                </ul>
-            </div>
-            {% endif %}
-        {% endfor %}
-
-        <!-- Enlace para iniciar sesión si ya tienen cuenta -->
-        <p>Ya tienes una cuenta? <a href="{% url 'login' %}">Iniciar sesión</a></p>
-    </form>
+   <div class="container my-5">
+    
+    <div class="card mb-4">
+        <div class="card-body">
+            {% block content %}
+            <div class="card mx-auto p-4" style="max-width: 400px;">
+            <form method="POST" novalidate>
+                {% csrf_token %}
+                <h2>Registrate</h2>
+        
+                {% bootstrap_form form %}
+                <button type="submit" class="btn btn-primary">Registrarse</button>
+                
+                {% for field in form %}
+                    {% if field.errors %}
+                    <div class="alert alert-danger">
+                        <ul>
+                            {% for error in field.errors %}
+                            <li>{{ error }}</li>
+                            {% endfor %}
+                        </ul>
+                    </div>
+                    {% endif %}
+                {% endfor %}
+        
+                <p>Ya tienes una cuenta? <a href="{% url 'login' %}">Iniciar sesión</a></p>
+            </form>
+        </div>
+    </div>
     {% endblock content %}
    </div>
 </body>
