--- a/templates/base.html
+++ b/templates/base.html
@@ -36,10 +36,10 @@
   		{%else%}
 		<ul class="navbar navbar-dark bg-dark justify-content-end">
 			<li class="nav-item">
-				<a class="nav-link link-light" href="{% url 'login' %}">Iniciar Sesión</a>
+				<a class="nav-link link-light " style="margin-left: 19px;" href="{% url 'login' %}">Iniciar Sesión</a>
 			  </li>
 			  <li class="nav-item">
-				<a class="nav-link link-light" href="{% url 'register' %}">Registrarse</a>
+				<a class="nav-link link-light" style="margin-left: 25px;" href="{% url 'register' %}">Registrarse</a>
 			  </li>
 		</ul>
   		{%endif%}
