--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -1,44 +1,51 @@
 {% extends 'base.html' %}
+
+{% load django_bootstrap5 %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>{% if title %} {{ title }} {% else %} Blog {% endif %}</title>
-	{% load django_bootstrap5 %}
-	{% bootstrap_css %}
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil-square" viewBox="0 0 16 16">
+		<path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
+		<path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5z"/>
+	  </svg>
+	<title>Document</title>
 </head>
 <body>
-	{% block content %}
-	<div class="container my-5">
-		<h1 class="text-center mb-4">Mis Publicaciones</h1>
+	
 
-		{% if is_admin %}
-    
-    <p>Bienvenido, administrador.</p>
-		{% else %}
-    
-    <p>Bienvenido, usuario</p>
-		{% endif %}
+{% block content %}
+<div class="container my-5">
+    <h1 class="text-center mb-4">Mis Publicaciones</h1>
 
-		{% for post in posts %}
-			<div class="card mb-4">
-				<div class="card-body">
-					<h2 class="card-title">{{ post.title }}</h2>
-					<p class="card-text mt-3">{{ post.content }}</p>
-					<small class="text-muted">Publicado el {{ post.published_at | date:"d M, Y" }} por {{ post.author | title }}</small>
+    {% if is_admin %}
+        <p>Bienvenido, administrador.</p>
+    {% else %}
+        <p>Bienvenido, usuario</p>
+    {% endif %}
+
+    {% for post in posts %}
+    <div class="card mb-4">
+        <div class="card-body">
+            <h2 class="card-title">{{ post.title }}</h2>
+            <p class="card-text mt-3">{{ post.content }}</p>
+            <small class="text-muted">Publicado el {{ post.published_at | date:"d M, Y" }} por {{ post.author | title }}</small>
+
+            {% if request.user.is_authenticated %}
+                <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+                    {% if is_admin or request.user == post.author %}
 					
-					
-					{% if request.user.is_authenticated and request.user == post.author %}
-						<div class="d-flex justify-content-start mt-3">
-							<a href="{% url 'post-edit' post.id %}" class="btn btn-warning btn-sm me-2">Editar</a>
-							<a href="{% url 'post-delete' post.id %}" class="btn btn-danger btn-sm">Eliminar</a>
-						</div>
-					{% endif %}
-				</div>
-			</div>
-		{% endfor %}
-	</div>
-	{% endblock content %}
+                        <a href="{% url 'post-edit' post.id %}" class="btn btn-outline-warning me-md-2"><i class="bi bi-pencil-square"></i>Editar</a>
+                        <a href="{% url 'post-delete' post.id %}" class="btn btn-outline-danger btn-sm">Eliminar</a>
+                    {% endif %}
+                </div>
+            {% endif %}
+        </div>
+    </div>
+{% endfor %}
+</div>
+{% endblock %}
+
 </body>
 </html>
