--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -6,18 +6,14 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil-square" viewBox="0 0 16 16">
-		<path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
-		<path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5z"/>
-	  </svg>
 	<title>Document</title>
 </head>
-<body>
+<body style="background-color: #090909;">
 	
 
 {% block content %}
-<div class="container my-5">
-    <h1 class="text-center mb-4">Mis Publicaciones</h1>
+<div class="container my-2" style="background-color: #d5ddde; border-radius: 15px;">
+    <h1 class="text-center mb-4" style="padding-top: 20px; color: #3d5866;">Mis Publicaciones</h1>
 
     {% if is_admin %}
         <p>Bienvenido, administrador.</p>
@@ -27,7 +23,7 @@
 
     {% for post in posts %}
     <div class="card mb-4">
-        <div class="card-body">
+        <div class="card-body p-4">
             <h2 class="card-title">{{ post.title }}</h2>
             <p class="card-text mt-3">{{ post.content }}</p>
             <small class="text-muted">Publicado el {{ post.published_at | date:"d M, Y" }} por {{ post.author | title }}</small>
@@ -36,16 +32,31 @@
                 <div class="d-grid gap-2 d-md-flex justify-content-md-end">
                     {% if is_admin or request.user == post.author %}
 					
-                        <a href="{% url 'post-edit' post.id %}" class="btn btn-outline-warning me-md-2"><i class="bi bi-pencil-square"></i>Editar</a>
-                        <a href="{% url 'post-delete' post.id %}" class="btn btn-outline-danger btn-sm">Eliminar</a>
+                        <a href="{% url 'post-edit' post.id %}" class="btn btn-outline-warning "><i class="bi bi-pencil-square"></i>Editar</a>
+                        <a href="{% url 'post-delete' post.id %}" class="btn btn-outline-danger">Eliminar</a>
                     {% endif %}
                 </div>
             {% endif %}
         </div>
     </div>
+	
 {% endfor %}
 </div>
-{% endblock %}
+<div class="row">
+	<div class="col-md-8">
 
+	</div>
+	<div class="col-md-4">
+		<div class="card mb-4">
+			<div class="card-body">
+				<h5 class="card-title">Sistema de Encuestas</h5>
+				<p class="card-text">¿Le gustaria ayudarnos respondiendo unas breves encuestas relacionadas a las Publicaciones?</p>
+				<a href="#" class="btn btn-primary">Ir a las Encuestas</a>
+			</div>
+		</div>
+	</div>
+</div>
+  
+{% endblock %}
 </body>
 </html>
