--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="{% static 'css/style.css' %}" />
     <script src="{% static 'js/app.js' %}" defer></script>
-    <title>My Site</title>
+    <title>Publicaciones</title>
 	
   </head>
   <body>
@@ -104,7 +104,7 @@
 	
   </body>
  
-<footer style="background-color: black; color: white; padding: 20px; width: 100%;">
+<footer style="background-color: black; color: white; padding: 20px; width: 100%; position: relative; bottom: 0;">
 	<div class="container"></div>
 		<p class="text-center">© 2025 Finkok, Inc. All rights reserved.</p>
 		<p class="text-center">Contactanos: soporte@finkok.com | +1 234 567 890</p>
