--- a/templates/base.html
+++ b/templates/base.html
@@ -32,7 +32,7 @@
 							Perfil
 						</button>
 						<div class="dropdown-menu" style="margin-right: 25px;">
-							<a class="dropdown-item" href="{% url 'posts' %}">Editar Perfil</a>
+							<a class="dropdown-item" href="{% url 'profile' %}">Editar Perfil</a>
 							<a class="dropdown-item" href="#">Adminstrar Usuarios</a>
 							
 							<div class="dropdown-divider"></div>
@@ -104,7 +104,7 @@
 	
   </body>
  
-<footer style="background-color: black; color: white; padding: 20px; width: 100%; position: relative; bottom: 0;">
+<footer style="background-color: black; color: white; padding: 20px; width: 100%; position: relative; bottom: 0px;">
 	<div class="container"></div>
 		<p class="text-center">© 2025 Finkok, Inc. All rights reserved.</p>
 		<p class="text-center">Contactanos: soporte@finkok.com | +1 234 567 890</p>
