--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -13,7 +13,7 @@
 
 {% block content %}
 <div class="container my-2" style="background-color: #d5ddde; border-radius: 15px; padding: 12px;">
-    <h1 class="text-center mb-4" style="padding-top: 20px; color: #3d5866;">Mis Publicaciones</h1>
+    <h1 class="text-center mb-4" style="padding-top: 20px; color: #3d5866;">Publicaciones</h1>
 
     {% if is_admin %}
         <p>Bienvenido, administrador.</p>
@@ -24,26 +24,25 @@
     {% for post in posts %}
     <div class="card mb-4">
         <div class="card-body p-4">
-            <h2 class="card-title">{{ post.title }}</h2>
+            <div class="d-flex justify-content-between align-items-center">
+            <h2 class="card-title">{{ post.title }}  
+            
+                <span class="badge bg-success" style="font-size: 0.4em; position: absolute; right: 10px;">{{ post.category }}</span>
+               
+            </div></h2>
             <p class="card-text mt-3">{{ post.content }}</p>
             <small class="text-muted">Publicado el {{ post.published_at | date:"d M, Y" }} por {{ post.author | title }}</small>
-
-            {% if request.user.is_authenticated %}
-                <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-                    {% if is_admin or request.user == post.author %}
-					
-                        <a href="{% url 'post-edit' post.id %}" class="btn btn-outline-warning "><i class="bi bi-pencil-square"></i>Editar</a>
-                        <a href="{% url 'post-delete' post.id %}" class="btn btn-outline-danger">Eliminar</a>
-                        {% else %}
-
-                        
-                    {% endif %}
-                </div>
-            {% endif %}
             <div class="d-grid gap-2 d-md-flex justify-content-md-start" style="margin-top: 20px;">
-                <a href="#" class="btn btn-outline-dark">Ver Comentarios</a>
-                <a href="#" class="btn btn-outline-primary">Encuesta Disponible</a>
+               <!-- <a class="btn btn-outline-dark" href="{% url 'add_comment_to_post' pk=post.pk %}">Comentarios</a> -->
+               
+                {% if request.user.is_authenticated %}
+                <a href="{% url 'post-detail' post.id %}" class="btn btn-outline-warning"><i class="bi bi-pencil-square"></i>Ver Publicación</a>
+            {% else %}
+                <a href="{% url 'login' %}?next={% url 'post-detail' post.id %}" class="btn btn-outline-warning"><i class="bi bi-pencil-square"></i>Ver Publicación</a>
+            {% endif %}
+            <a href="#" class="btn btn-outline-primary" style="position: absolute; right: 10px;">Encuesta Disponible</a>
             </div>
+          
         </div>
     </div>
 	
