--- a/blog/templates/blog/post_form.html
+++ b/blog/templates/blog/post_form.html
@@ -11,29 +11,34 @@
 </head>
 <body>
     {% block content %}
-    <div class="">
-        
-        <div class="">
-            <div class="" style="border-color: black;">
-                <div class="card-body" >
-                    
-                    
-                    <div class="card2 mx-auto p-4" style="max-width: 400px;">
-                        
-                    <h2 class="text-center mb-4">{% if id %} Editar {% else %} Nuevo {% endif %} Post</h2>
-                    
-                    <form method="post" novalidate>
-                        {% csrf_token %}
-                        <div class="mb-3">
-                            <div class="mb-3">
-                                {{ form.as_p }}
-                            </div>
-                       
-                        <button type="submit" class="btn btn-primary center">Guardar</button>
-                      </form>
-                      
-                        
-                    {% endblock content %}
+    <div class="container my-5">
+        <div class="card mx-auto" style="max-width: 600px;">
+            <div class="card-body">
+                <h2 class="text-center mb-4">{% if form.instance.pk %} Editar {% else %} Nuevo {% endif %} Post</h2>
+                <form method="post" enctype="multipart/form-data" novalidate>
+                    {% csrf_token %}
+                    <div class="mb-3">
+                        {{ form.title.label_tag }}
+                        {{ form.title }}
+                    </div>
+                    <div class="mb-3">
+                        {{ form.content.label_tag }}
+                        {{ form.content }}
+                    </div>
+                    <div class="mb-3">
+                        {{ form.category.label_tag }}
+                        {{ form.category }}
+                    </div>
+                    <div class="mb-3">
+                        {{ form.image.label_tag }}
+                        {{ form.image }}
+                    </div>
+                    <button type="submit" class="btn btn-primary w-100">Guardar</button>
+                </form>
+            </div>
+        </div>
+    </div>
+    {% endblock %}
                     </div>
                 </div>
             </div>
