--- a/templates/base.html
+++ b/templates/base.html
@@ -58,7 +58,7 @@
 					</button>
 					<div class="dropdown-menu" style="margin-right: 25px;">
 						<a class="dropdown-item" href="{% url 'profile' %}">Editar Perfil</a>
-						
+						<a class="dropdown-item" href="{% url 'my_posts' %}">Mis Publicaciones</a>
 						<div class="dropdown-divider"></div>
 						<a class="dropdown-item" href="{% url 'logout' %}">Cerrar Sesión</a>
 					</div>
@@ -72,8 +72,12 @@
 			<li class="nav-item"></li>
 				<a class="nav-link link-light" href="{% url 'posts' %}">Publicaciones</a>
 			</li>
-			<li class="nav-item"></li>
-				<a class="nav-link link-light"  href="{% url 'post-create' %}">Nueva Publicación</a>
+			<li class="nav-item">
+				{% if request.user.is_authenticated %}
+					<a class="nav-link link-light" href="{% url 'post-create' %}">Nueva Publicación</a>
+				{% else %}
+					<a class="nav-link link-light" href="{% url 'login' %}?next={% url 'post-create' %}">Nueva Publicación</a>
+				{% endif %}
 			</li>
 			<div class="d-flex">
 				<li class="nav-item"></li>
@@ -103,7 +107,7 @@
   	</main>
 	
   </body>
- 
+ <!--
 <footer style="background-color: black; color: white; padding: 20px; width: 100%; position: relative; bottom: 0px;">
 	<div class="container"></div>
 		<p class="text-center">© 2025 Finkok, Inc. All rights reserved.</p>
@@ -113,7 +117,7 @@
 			<a href="" style="color: white;">Terms of Service</a>
 		</p>
 	</div>
-</footer>
+</footer>-->
 {% bootstrap_javascript %}
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVFHRuCZqLMUXuI6UXqyk5KtzzI+4aWj9T2/YpDtY78z47cFT+2w" crossorigin="anonymous"></script>
 </html>
