--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -1,29 +1,28 @@
+{% extends 'base.html' %}
+
+{% load django_bootstrap5 %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Registrarse</title>
-    {% extends 'base.html' %}
-    {% load django_bootstrap5 %}
-    {% bootstrap_css %}
+    <title>Registro</title>
 </head>
 <body>
    <div class="container my-5">
-    
     <div class="card mb-4">
         <div class="card-body">
+            {% load django_bootstrap5 %}
             {% block content %}
             <div class="card mx-auto p-4" style="max-width: 400px;">
             <form method="POST" novalidate>
                 {% csrf_token %}
                 <h2>Registrate</h2>
-        
                 {% bootstrap_form form %}
                 <button type="submit" class="btn btn-primary">Registrarse</button>
                 {% if request.POST %} 
                     {% for field in form %}
-                        {% if field.errors and request.POST%}
+                        {% if field.errors and request.POST %}
                         <div class="alert alert-danger">
                             <ul>
                                 {% for error in field.errors %}
@@ -34,12 +33,11 @@
                         {% endif %}
                     {% endfor %}
                 {% endif %}
-        
-                <p>Ya tienes una cuenta? <a href="{% url 'login' %}">Iniciar sesión</a></p>
             </form>
+            </div>
+            {% endblock %}
         </div>
     </div>
-    {% endblock content %}
-   </div>
+</div>
 </body>
 </html>
