--- a/templates/base.html
+++ b/templates/base.html
@@ -33,7 +33,7 @@
 						</button>
 						<div class="dropdown-menu" style="margin-right: 25px;">
 							<a class="dropdown-item" href="{% url 'profile' %}">Editar Perfil</a>
-							<a class="dropdown-item" href="#">Adminstrar Usuarios</a>
+							<a class="dropdown-item" href="{% url 'admin_users' %}">Administrar Usuarios</a>
 							
 							<div class="dropdown-divider"></div>
 							<a class="dropdown-item" href="{% url 'logout' %}">Cerrar Sesión</a>
