--- a/blog/templates/blog/my_posts.html
+++ b/blog/templates/blog/my_posts.html
@@ -34,16 +34,15 @@
                 {% endif %}
                 <small class="text-muted">Publicado el {{ post.published_at | date:"d M, Y" }} por {{ post.author | title }}</small>
     
-                <div class="d-grid gap-2 d-md-flex justify-content-md-start" style="margin-top: 20px;">
-                    <a href="{% url 'post-detail' post.id %}" class="btn btn-outline-warning"><i class="bi bi-pencil-square"></i>Ver Publicación</a>
-                    {% if request.user.is_authenticated and (is_admin or request.user == post.author) %}
-                        <a href="{% url 'post-edit' post.id %}" class="btn btn-outline-primary"><i class="bi bi-pencil-square"></i>Editar</a>
-                        <form method="POST" action="{% url 'post-delete' post.id %}" style="display:inline;">
-                            {% csrf_token %}
-                            <button type="submit" class="btn btn-outline-danger"><i class="bi bi-trash"></i>Eliminar</button>
-                        </form>
-                    {% endif %}
-                </div>
+                <div class="d-grid gap-2 d-md-flex justify-content-md-end mt-3">
+                {% if is_admin or request.user == post.author %}
+                    <form method="POST" action="{% url 'post-delete' post.id %}" style="display:inline;">
+                        {% csrf_token %}
+                        <a href="{% url 'post-edit' post.id %}" class="btn btn-outline-warning">Editar</a>
+                        <button type="submit" class="btn btn-outline-danger"><i class="bi bi-trash"></i>Eliminar</button>
+                    </form>
+                {% endif %}
+            </div>
             </div>
         </div>
         {% endfor %}
