--- a/templates/base.html
+++ b/templates/base.html
@@ -34,7 +34,7 @@
 						<div class="dropdown-menu" style="margin-right: 25px;">
 							<a class="dropdown-item" href="{% url 'profile' %}">Editar Perfil</a>
 							<a class="dropdown-item" href="{% url 'admin_users' %}">Administrar Usuarios</a>
-							
+							<a class="dropdown-item" href="{% url 'my_posts' %}">Mis Publicaciones</a>
 							<div class="dropdown-divider"></div>
 							<a class="dropdown-item" href="{% url 'logout' %}">Cerrar Sesión</a>
 						</div>
