--- a/blog/templates/blog/my_posts.html
+++ b/blog/templates/blog/my_posts.html
@@ -28,7 +28,7 @@
                         <span class="badge bg-success" style="font-size: 0.4em; position: absolute; right: 10px;">{{ post.category }}</span>
                     </h2>
                 </div>
-                <p class="card-text mt-3">{{ post.content }}</p>
+                <p class="card-text mt-3">{{ post.description }}</p>
                 {% if post.image %}
                     <img src="{{ post.image.url }}" class="img-fluid mb-3" alt="Imagen de {{ post.title }}">
                 {% endif %}
