--- a/blog/templates/blog/post_form.html
+++ b/blog/templates/blog/post_form.html
@@ -1,13 +1,12 @@
+<!-- filepath: /home/jmedina/projectD/djangoproject/blog/templates/blog/post_form.html -->
 {% extends 'base.html' %}
 {% load django_bootstrap5 %}
-    {% bootstrap_css %}
 <!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% if id %} Editar {% else %} {% endif %} Publicación</title>
-    
+    <title>{% if form.instance.pk %} Editar {% else %} Nuevo {% endif %} Post</title>
 </head>
 <body>
     {% block content %}
@@ -20,6 +19,10 @@
                     <div class="mb-3">
                         {{ form.title.label_tag }}
                         {{ form.title }}
+                    </div>
+                    <div class="mb-3">
+                        {{ form.description.label_tag }}
+                        {{ form.description }}
                     </div>
                     <div class="mb-3">
                         {{ form.content.label_tag }}
@@ -39,10 +42,5 @@
         </div>
     </div>
     {% endblock %}
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
 </body>
 </html>
