--- a/blog/templates/blog/post_form.html
+++ b/blog/templates/blog/post_form.html
@@ -36,7 +36,12 @@
                         {{ form.image.label_tag }}
                         {{ form.image }}
                     </div>
+                    <div class="mb-3">
+                        {{ form.question.label_tag }}
+                        {{ form.question }}
+                    </div>
                     <button type="submit" class="btn btn-primary w-100">Guardar</button>
+                    
                 </form>
             </div>
         </div>
