--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -30,7 +31,7 @@
     </div>
 
     <div style="margin-top: 20px; text-align: center;">
-        <a href="{% url 'polls:createnew' %}" class="round-button">Nueva Encuesta</a>
+        <a href="{% url 'polls:createnew' 1 %}" class="round-button">Nueva Encuesta</a> <!-- Reemplaza '1' con un post_id válido -->
     </div>
    
 </body>
