--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -8,7 +8,7 @@
             <h1 class="mb-4">{{ post.title }}</h1>
             <p style="position: absolute; right: 10px;"><strong>Categoría:</strong> {{ post.category }}</p>
             <br>
-            <small class="text-muted">Publicado el {{ post.published_at | date:"d M, Y" }} por {{ post.author | title }}</small>
+            <small class="text-muted">Publicado el {{ post.published_at | date:"d M, Y" }} por {{ post.author.first_name }} {{ post.author.last_name }}</small>
             <br>
 
             <p>{{ post.description }}</p>
@@ -28,6 +28,7 @@
             <p>{{ post.content }}</p>
         </div>
     </div>
+    <hr class="my-4">
     <h2 class="h4 mt-5">Agrega un Comentario</h2>
     <form method="POST" action="{% url 'add_comment_to_post' pk=post.pk %}" class="post-form">
         {% csrf_token %}
