--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -1,27 +1,34 @@
 {% extends 'base.html' %}
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-
 {% load static %}
+
 {% block content %}
 <div class="container my-5">
     <h2>Tu perfil</h2>
     <div class="card p-4">
         <form method="post" novalidate>
             {% csrf_token %}
-            {{ form.as_p }}
+            <div class="mb-3">
+                <label for="first_name" class="form-label">Nombre</label>
+                {{ form.first_name }}
+            </div>
+            <div class="mb-3">
+                <label for="last_name" class="form-label">Apellido</label>
+                {{ form.last_name }}
+            </div>
+            <div class="mb-3">
+                <label for="username" class="form-label">Nombre de usuario</label>
+                {{ form.username }}
+            </div>
+            <div class="mb-3">
+                <label for="email" class="form-label">Correo electrónico</label>
+                {{ form.email }}
+            </div>
+            <div class="mb-3">
+                <label for="password" class="form-label">Contraseña</label>
+                {{ form.password }}
+            </div>
             <button type="submit" class="btn btn-primary">Guardar cambios</button>
         </form>
     </div>
 </div>
 {% endblock %}
-
-</body>
-</html>
