--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -20,6 +20,7 @@
                 <h2>Registrate</h2>
                 {% bootstrap_form form %}
                 <button type="submit" class="btn btn-primary">Registrarse</button>
+                <label for="first_name" class="form-label">Nombre</label>
                 {% if request.POST %} 
                     {% for field in form %}
                         {% if field.errors and request.POST %}
