hasta el moemnto funciona

--- a/polls/templates/polls/createnew.html
+++ b/polls/templates/polls/createnew.html
@@ -1,3 +1,7 @@
+{% extends 'base.html' %}
+{% load django_bootstrap5 %}
+
+{% block content %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -17,6 +21,7 @@
                     <p>{{ post.description }}</p>
                     <form action="{% url 'polls:createnew' post.id %}" method="POST">
                         {% csrf_token %}
+                        <input type="hidden" name="post_id" value="{{ post.id }}">
                         <input type="text" name="question_text" placeholder="Pregunta..." required>
                         
                         <h6>Agrega las opciones:</h6>
@@ -34,3 +39,4 @@
     </div>
 </body>
 </html>
+{% endblock %}
