--- a/blog/templates/blog/post_form.html
+++ b/blog/templates/blog/post_form.html
@@ -1,4 +1,3 @@
-<!-- filepath: /home/jmedina/projectD/djangoproject/blog/templates/blog/post_form.html -->
 {% extends 'base.html' %}
 {% load django_bootstrap5 %}
 <!DOCTYPE html>
@@ -36,16 +35,19 @@
                         {{ form.image.label_tag }}
                         {{ form.image }}
                     </div>
-                    <div class="mb-3">
-                        {{ form.question.label_tag }}
-                        {{ form.question }}
-                    </div>
                     <button type="submit" class="btn btn-primary w-100">Guardar</button>
-                    
+<br>
+                    {% if form.instance.pk %}
+                <div class="mt-3">
+                    <a href="{% url 'polls:createnew' form.instance.pk %}" class="btn btn-outline-warning w-100">Crear Encuesta</a>
+                </div>
+                {% endif %}
                 </form>
+                
             </div>
         </div>
     </div>
-    {% endblock %}
+    
 </body>
 </html>
+{% endblock %}
