--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -1,9 +1,5 @@
 {% extends 'base.html' %}
-<<<<<<< HEAD
-{% load static %}
-=======
 {% load django_bootstrap5 %}
->>>>>>> 27de25d (hasta el moemnto funciona)
 
 {% block content %}
 <!DOCTYPE html>
@@ -33,8 +29,8 @@
         </div>
     </div>
 
-    <div style="margin-top: 20px; text-align: center;">
-        <a href="{% url 'polls:createnew' 1 %}" class="round-button">Nueva Encuesta</a> <!-- Reemplaza '1' con un post_id válido -->
+    <!-- <div style="margin-top: 20px; text-align: center;">
+        <a href="{% url 'polls:createnew' 1 %}" class="round-button">Nueva Encuesta</a> -->
     </div>
 </body>
 </html>
