--- a/blog/templates/blog/post_form.html
+++ b/blog/templates/blog/post_form.html
@@ -36,13 +36,17 @@
                         {{ form.image }}
                     </div>
                     <button type="submit" class="btn btn-primary w-100">Guardar</button>
-<br>
-                    {% if form.instance.pk %}
-                <div class="mt-3">
-                    <a href="{% url 'polls:createnew' form.instance.pk %}" class="btn btn-outline-warning w-100">Crear Encuesta</a>
-                </div>
-                {% endif %}
-                </form>
+
+                    <div class="mt-3"></div>
+                    <br>
+                    <hr>
+                   
+                    <p>Si lo desea, puede agregar una encuesta relacionada a su publicación.</p>
+                    <br>
+                    <a href="{% if form.instance.pk %}{% url 'polls:createnew' form.instance.pk %}{% else %}#{% endif %}" class="btn btn-outline-warning w-100">
+                        {% if form.instance.pk and form.instance.poll %}Editar Encuesta{% else %}Crear Encuesta{% endif %}
+                    </a>
+                    </form>
                 
             </div>
         </div>
