--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -7,6 +7,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    {% load static %}
+
     <link rel="stylesheet" href="{% static 'polls/style.css' %}">
     <title>Inicio</title>
 </head>
@@ -23,12 +25,12 @@
                     {% endfor %}
                 </ul>
                 {% else %}
-                <p>No polls are available.</p>
+                <p>No hay encuestas disponinbles.</p>
                 {% endif %}
             </div>
         </div>
     </div>
-
+   
     <!-- <div style="margin-top: 20px; text-align: center;">
         <a href="{% url 'polls:createnew' 1 %}" class="round-button">Nueva Encuesta</a> -->
     </div>
