--- a/blog/templates/blog/post_form.html
+++ b/blog/templates/blog/post_form.html
@@ -43,8 +43,8 @@
                    
                     <p>Si lo desea, puede agregar una encuesta relacionada a su publicación.</p>
                     <br>
-                   
-                        {% if post.poll %}Editar Encuesta{% else %}Crear Encuesta{% endif %}
+                    <a href="{% if form.instance.pk %}{% url 'polls:createnew' form.instance.pk %}{% else %}#{% endif %}" class="btn btn-outline-warning w-100">
+                        {% if form.instance.pk and form.instance.poll %}Editar Encuesta{% else %}Crear Encuesta{% endif %}
                     </a>
                     </form>
                 
